- fix example css for IE (table header color) - fix tree table spacing for IE

--- a/trunk/src/example/war/debug-panel.css
+++ b/trunk/src/example/war/debug-panel.css
@@ -41,7 +41,7 @@ div.DebugPanel-panel {
 }
 
 .DebugPanel-TreeTable-header {
-  background-color: lightgray;
+  background-color: #d3d3d3;
   font-weight: bold;
 }
 
@@ -163,7 +163,7 @@ div.DebugPanel-panel {
 }
 
 .DebugPanel-logHeader td {
-  background-color: lightgray;
+  background-color: #d3d3d3;
   font-weight: bold;
 }
 
@@ -180,7 +180,7 @@ div.DebugPanel-panel {
 }
 
 .DebugPanel-cookiesHeader {
-  background-color: lightgray;
+  background-color: #d3d3d3;
   font-weight: bold;
 }
 
@@ -198,7 +198,7 @@ div.DebugPanel-panel {
 }
 
 .DebugPanel-errorsHeader {
-  background-color: lightgray;
+  background-color: #d3d3d3;
   font-weight: bold;
 }
 
